--- a/desktop/kde/l10n/kde-l10n-bg/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-bg/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:bg</IsA>
         <Summary>Bulgarian KDE4 internationalization package</Summary>
         <Description>kde-l10n-bg is the KDE4 internationalization package that provides Bulgarian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="e695b8dbf230fe23265ee5c065bd21503b4a89c5">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-bg-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="b734b2c25b6f1fdf85da326cd32dde743ecfb75d">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-bg-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
