--- a/desktop/kde/l10n/kde-l10n-cs/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-cs/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:cs</IsA>
         <Summary>Czech KDE4 internationalization package</Summary>
         <Description>kde-l10n-cs is the KDE4 internationalization package that provides Czech translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="b7523a07510552e91362c909fc177e644d6e05ea">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-cs-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="a1e0e1509fc584b8ec17fb302ff0a166dd30dbe6">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-cs-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="22">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="21">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
