--- a/desktop/kde/l10n/kde-l10n-da/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-da/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:da</IsA>
         <Summary>Danish KDE4 internationalization package</Summary>
         <Description>kde-l10n-da is the KDE4 internationalization package that provides Danish translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="ee42b1fa33d35076c51c3f060ae621228438aef8">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-da-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="fb4ec4218099903931ef71f17a158110f7299c60">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-da-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="22">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="21">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
