--- a/desktop/kde/l10n/kde-l10n-el/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-el/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:el</IsA>
         <Summary>Greek KDE4 internationalization package</Summary>
         <Description>kde-l10n-el is the KDE4 internationalization package that provides Greek translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="b8152bd4530a59351aedd1963f6e4bb8c254c14c">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-el-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="8582668660a17b23fb14221896eaa50ab8d48db9">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-el-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
