--- a/desktop/kde/l10n/kde-l10n-en_GB/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-en_GB/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:en_GB</IsA>
         <Summary>British English KDE4 internationalization package</Summary>
         <Description>kde-l10n-en_GB is the KDE4 internationalization package that provides British English translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="80f5a721108189fd9fab6776f322006b014b8494">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-en_GB-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="bfce76872217db90af4eaa58d6dec9048d83497f">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-en_GB-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
