--- a/desktop/kde/l10n/kde-l10n-kk/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-kk/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:kk</IsA>
         <Summary>Kazakh KDE4 internationalization package</Summary>
         <Description>kde-l10n-kk is the KDE4 internationalization package that provides Kazakh translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="1d36941a789021c7a223eb6f455ec3b52d63c71d">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-kk-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="5b2cfeb1891d8ad2aa2ec62ff578575600628ff4">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-kk-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="22">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="21">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
