--- a/desktop/kde/l10n/kde-l10n-lv/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-lv/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:lv</IsA>
         <Summary>Latvian KDE4 internationalization package</Summary>
         <Description>kde-l10n-lv is the KDE4 internationalization package that provides Latvian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="16b11318e621583debff74d026f6d2a53e4a83a4">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-lv-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="7bdf2704a0ab3248c6b4b0e61b2e9522c59a2879">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-lv-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
