--- a/desktop/kde/l10n/kde-l10n-pt/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-pt/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:pt</IsA>
         <Summary>Portuguese KDE4 internationalization package</Summary>
         <Description>kde-l10n-pt is the KDE4 internationalization package that provides Portuguese translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="2b3bcc564a15aeed0db89b4b1a29fcb76a0dfbef">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-pt-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="cdeffe8de1f761bd8e16d52ec2789febef71c47c">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-pt-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
