--- a/desktop/kde/l10n/kde-l10n-ru/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ru/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ru</IsA>
         <Summary>Russian KDE4 internationalization package</Summary>
         <Description>kde-l10n-ru is the KDE4 internationalization package that provides Russian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="72164d338e70e742b2e253ad0e76107e7b093ad4">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-ru-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="8a66ad51977cf1fc1954536df5b82c6d775c72b3">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-ru-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
