--- a/desktop/kde/l10n/kde-l10n-sl/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-sl/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:sl</IsA>
         <Summary>Slovenian KDE4 internationalization package</Summary>
         <Description>kde-l10n-sl is the KDE4 internationalization package that provides Slovenian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="cacb9e62e38413bceac1554efa055eb8e3f1a767">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-sl-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="d4f16f6bec05b61c6ac6a9ec8721dfaabec1c241">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-sl-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
