--- a/desktop/kde/l10n/kde-l10n-de/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-de/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:de</IsA>
         <Summary>German KDE4 internationalization package</Summary>
         <Description>kde-l10n-de is the KDE4 internationalization package that provides German translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="52cca23388c39c1fb0dd30c890691fbf828c9ead">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-de-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="018ecfb9106755e1c325efc01fbbb3e666a8c204">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-de-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="31">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="30">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
