--- a/desktop/kde/l10n/kde-l10n-et/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-et/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:et</IsA>
         <Summary>Estonian KDE4 internationalization package</Summary>
         <Description>kde-l10n-et is the KDE4 internationalization package that provides Estonian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="72ee84fb15fd69a5ae29f8bd8b78d4fffb7a2d12">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-et-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="96e938ab182af34d6b09d79c012f11ea83a6f7ce">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-et-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
