--- a/desktop/kde/l10n/kde-l10n-eu/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-eu/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:eu</IsA>
         <Summary>Basque KDE4 internationalization package</Summary>
         <Description>kde-l10n-eu is the KDE4 internationalization package that provides Basque translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="0fe4fe9cc9edbbf9312de049da1a3eb0283b3f98">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-eu-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="6006bbc01df5d7345b53b0ab901a05a0480931db">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-eu-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="17">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="16">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
