--- a/desktop/kde/l10n/kde-l10n-fi/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-fi/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:fi</IsA>
         <Summary>Finnish KDE4 internationalization package</Summary>
         <Description>kde-l10n-fi is the KDE4 internationalization package that provides Finnish translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="52cc32627910276c8329d8b024fa048fd90dd27a">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-fi-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="c598a07ee1c5d11ff553a5525083128c95f07ed3">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-fi-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
