--- a/desktop/kde/l10n/kde-l10n-ga/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ga/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ga</IsA>
         <Summary>Irish Gaelic KDE4 internationalization package</Summary>
         <Description>kde-l10n-ga is the KDE4 internationalization package that provides Irish Gaelic translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="db969644b33d017636b54eaea3fc1b1ebcca41e8">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-ga-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="7dd3afb761160ca4ceaa0a21f63b5b0dbd015a79">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-ga-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
