--- a/desktop/kde/l10n/kde-l10n-gl/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-gl/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:gl</IsA>
         <Summary>Galician KDE4 internationalization package</Summary>
         <Description>kde-l10n-gl is the KDE4 internationalization package that provides Galician translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="305ce17207b7f96fab4bec46f65f9ecaa3121927">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-gl-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="b03c80cc19ec62f892b3738d007c27fae48dc313">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-gl-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
