--- a/desktop/kde/l10n/kde-l10n-he/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-he/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:he</IsA>
         <Summary>Hebrew KDE4 internationalization package</Summary>
         <Description>kde-l10n-he is the KDE4 internationalization package that provides Hebrew translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="f3ba93dad620f9e9dde364564967c2915d3bc7e6">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-he-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="4789e4067f9a5271b33f7c63f60a492c1b569b6f">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-he-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="17">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="16">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
