--- a/desktop/kde/l10n/kde-l10n-is/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-is/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:is</IsA>
         <Summary>Icelandic KDE4 internationalization package</Summary>
         <Description>kde-l10n-is is the KDE4 internationalization package that provides Icelandic translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="717de2188d82b1c63c0361ff0596b04990b50e3a">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-is-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="c6f4d23885fac4d5ccccbd6352372beec2634dfc">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-is-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="17">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="16">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
