--- a/desktop/kde/l10n/kde-l10n-km/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-km/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:km</IsA>
         <Summary>Khmer KDE4 internationalization package</Summary>
         <Description>kde-l10n-km is the KDE4 internationalization package that provides Khmer translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="be87dce8d5bcec00011430eb775b6aa5625411d3">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-km-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="ee4880ca5c943cf93964196a8e562a423084209c">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-km-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
