--- a/desktop/kde/l10n/kde-l10n-ml/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ml/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ml</IsA>
         <Summary>Malayalam KDE4 internationalization package</Summary>
         <Description>kde-l10n-ml is the KDE4 internationalization package that provides Malayalam translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="130360c4e12c26ea4cfdea6efdc6733b53e40820">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-ml-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="1ce807839d5b5ec9cb49a8fdfab7801c96965911">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-ml-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="22">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="21">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
