--- a/desktop/kde/l10n/kde-l10n-nl/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-nl/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:nl</IsA>
         <Summary>Dutch KDE4 internationalization package</Summary>
         <Description>kde-l10n-nl is the KDE4 internationalization package that provides Dutch translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="d9f3345d986f9c11577ab37da7d3c6cd85f6cd93">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-nl-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="4323a09586256a9e2b72728b37599413e2664897">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-nl-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="31">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="30">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
