--- a/desktop/kde/l10n/kde-l10n-nn/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-nn/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:nn</IsA>
         <Summary>Norwegian Nynorsk KDE4 internationalization package</Summary>
         <Description>kde-l10n-nn is the KDE4 internationalization package that provides Norwegian Nynorsk translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="aa517bd630a56b3ee213a4ee1a6d07880d30b670">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-nn-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="196fe9c3472a415287a9fb83d6d000813085a81d">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-nn-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
