--- a/desktop/kde/l10n/kde-l10n-pl/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-pl/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:pl</IsA>
         <Summary>Polish KDE4 internationalization package</Summary>
         <Description>kde-l10n-pl is the KDE4 internationalization package that provides Polish translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="ba3d825332391aed08ee44f553bfba44649c1cc8">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-pl-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="0a2a19b03c5ce7a15fc20063e73832bafdd41e10">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-pl-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="31">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="30">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
