--- a/desktop/kde/l10n/kde-l10n-ro/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ro/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ro</IsA>
         <Summary>Romanian KDE4 internationalization package</Summary>
         <Description>kde-l10n-ro is the KDE4 internationalization package that provides Romanian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="991090b3d5deb41998c32cb824f674883334ec83">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-ro-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="d8864799314104afc3f90b0afb562a9198dbf385">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-ro-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="17">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="16">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
