--- a/desktop/kde/l10n/kde-l10n-sr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-sr/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:sr</IsA>
         <Summary>Serbian KDE4 internationalization package</Summary>
         <Description>kde-l10n-sr is the KDE4 internationalization package that provides Serbian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="dfcc2c9ae3b32a4e5c6e166a2ad8a07ac50dfa48">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-sr-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="86230158c299ce51943adab88eb4158159e09ed1">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-sr-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -32,6 +32,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="17">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="16">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
