--- a/desktop/kde/l10n/kde-l10n-sv/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-sv/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:sv</IsA>
         <Summary>Swedish KDE4 internationalization package</Summary>
         <Description>kde-l10n-sv is the KDE4 internationalization package that provides Swedish translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="a28bd4ff88fd8c5fd8ea000d4a65189f805215de">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-sv-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="b15f778c46908e4fa1d1aee9e849fe3c4edd4992">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-sv-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="26">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="25">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
