--- a/desktop/kde/l10n/kde-l10n-th/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-th/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:th</IsA>
         <Summary>Thai KDE4 internationalization package</Summary>
         <Description>kde-l10n-ku is the KDE4 internationalization package that provides Thai translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="6af4d19411c68b91efc3a2bf8a73a2fb32e522d6">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-th-4.5.3.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="890acc18e5b91d4ae55e9c2034f03f923b2711d0">mirrors://kde/stable/4.5.4/src/kde-l10n/kde-l10n-th-4.5.4.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="19">
+            <Date>2010-12-12</Date>
+            <Version>4.5.4</Version>
+            <Comment>Version bump to 4.5.4</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="18">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
