Add translations of 4 new strings added in randr-features-4.6-t1170315.diff patch of kdebase-workspace.

--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -65,6 +65,9 @@
             <Patch level="1">fix-details-translation.diff</Patch>
 
             <Patch level="1">may-to-mayis.patch</Patch>
+
+            <!-- Add translations of 4 new strings added in randr-features-4.6-t1170315.diff patch of kdebase-workspace -->
+            <Patch level="1">add-krandr-4.6-translations.diff</Patch>
         </Patches>
     </Source>
     <Package>
@@ -90,6 +93,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="59">
+            <Date>2010-12-13</Date>
+            <Version>4.5.4</Version>
+            <Comment>Add translations of 4 new strings added in randr-features-4.6-t1170315.diff patch of kdebase-workspace.</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="58">
             <Date>2010-12-12</Date>
             <Version>4.5.4</Version>
