Write strict perl dependencies to the remaining packages.

--- a/programming/language/perl/perl-ExtUtils-Depends/pspec.xml
+++ b/programming/language/perl/perl-ExtUtils-Depends/pspec.xml
@@ -14,14 +14,14 @@
         <Description>This module tries to make it easy to build Perl extensions that use functions and typemaps provided by other Perl extensions.</Description>
         <Archive sha1sum="94a5e869b53acfd94632fcbabd7dd6568bb4f778" type="targz">mirrors://sourceforge/gtk2-perl/ExtUtils-Depends-0.302.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.2">perl</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>perl-ExtUtils-Depends</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.2">perl</Dependency>
         </RuntimeDependencies>
         <Replaces>
             <Package>ExtUtils-Depends</Package>
