--- a/programming/language/perl/perl-ExtUtils-PkgConfig/pspec.xml
+++ b/programming/language/perl/perl-ExtUtils-PkgConfig/pspec.xml
@@ -14,14 +14,14 @@
         <Description>The pkg-config program retrieves information about installed libraries, usually for the purposes of compiling against and linking to them.</Description>
         <Archive sha1sum="cb61eb3c4dd6d4689ce945e3f7b8d3a1f9db7dc8" type="targz">mirrors://sourceforge/gtk2-perl/ExtUtils-PkgConfig-1.12.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.2">perl</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>perl-ExtUtils-PkgConfig</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.2">perl</Dependency>
         </RuntimeDependencies>
         <Replaces>
             <Package>ExtUtils-PkgConfig</Package>
