--- a/programming/language/perl/perl-Glib/pspec.xml
+++ b/programming/language/perl/perl-Glib/pspec.xml
@@ -16,7 +16,7 @@
         <BuildDependencies>
             <Dependency>perl-ExtUtils-Depends</Dependency>
             <Dependency>perl-ExtUtils-PkgConfig</Dependency>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.2">perl</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch>Glib-1.210-exception-trapping.patch</Patch>
@@ -26,7 +26,7 @@
     <Package>
         <Name>perl-Glib</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.2">perl</Dependency>
         </RuntimeDependencies>
         <Replaces>
             <Package>glib2-perl</Package>
