--- a/programming/language/perl/perl-XML-Simple/pspec.xml
+++ b/programming/language/perl/perl-XML-Simple/pspec.xml
@@ -15,7 +15,7 @@
         <Archive sha1sum="81d38dd9fd955b0322ac64099f2d116c296267d1" type="targz">mirrors://cpan/authors/id/G/GR/GRANTM/XML-Simple-2.18.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>perl-XML-Parser</Dependency>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.2">perl</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -23,7 +23,7 @@
         <Name>perl-XML-Simple</Name>
         <RuntimeDependencies>
             <Dependency>perl-XML-Parser</Dependency>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.2">perl</Dependency>
         </RuntimeDependencies>
         <Replaces>
             <Package>XML-Simple</Package>
