Use pangram instead of a march to preview the fonts (#14403).
BUG:FIXED:14403

--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -68,6 +68,9 @@
 
             <!-- Add translations of 4 new strings added in randr-features-4.6-t1170315.diff patch of kdebase-workspace -->
             <Patch level="1">add-krandr-4.6-translations.diff</Patch>
+
+            <!-- Use pangram instead of a march to preview the fonts (#14403). -->
+            <Patch level="1">pangram.patch</Patch>
         </Patches>
     </Source>
     <Package>
@@ -93,6 +96,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="60">
+            <Date>2010-12-14</Date>
+            <Version>4.5.4</Version>
+            <Comment>Use pangram instead of a march to preview the fonts (#14403).</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="59">
             <Date>2010-12-13</Date>
             <Version>4.5.4</Version>
