--- a/programming/language/python/python-pylint/pspec.xml
+++ b/programming/language/python/python-pylint/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>app:console</IsA>
         <Summary>Analyzes Python code looking for bugs and signs of poor quality</Summary>
         <Description>pylint is a Python tool that checks if a module satisfy a coding standard.</Description>
-        <Archive sha1sum="ae46587ab9311581e8662abb892b448a3a374cf7" type="targz">http://ftp.logilab.org/pub/pylint/pylint-0.21.3.tar.gz</Archive>
+        <Archive sha1sum="e44748f20455709e7e4c0365214f88a469799a9a" type="targz">http://ftp.logilab.org/pub/pylint/pylint-0.22.0.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-logilab-astng</Dependency>
             <Dependency>python-logilab-common</Dependency>
@@ -37,6 +37,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-12-17</Date>
+            <Version>0.22.0</Version>
+            <Comment>Version Bump</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2010-10-13</Date>
             <Version>0.21.3</Version>
