--- a/programming/language/python/python-logilab-common/pspec.xml
+++ b/programming/language/python/python-logilab-common/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>A bunch of modules to provide low level functionalities to Python</Summary>
         <Description>python-logilab-common contains a bunch of Python modules providing low level functionalities shared among some python projects.</Description>
-        <Archive sha1sum="d44f6057058480c6ad08d536c42dd5e3c63b61b5" type="targz">http://ftp.logilab.org/pub/common/logilab-common-0.52.0.tar.gz</Archive>
+        <Archive sha1sum="5994b48c36a1c55abfd484a98cc340634fce9e4c" type="targz">http://ftp.logilab.org/pub/common/logilab-common-0.53.0.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -25,6 +25,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-12-17</Date>
+            <Version>0.53</Version>
+            <Comment>Version bump</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2010-10-13</Date>
             <Version>0.52</Version>
