--- a/programming/language/python/python-logilab-astng/pspec.xml
+++ b/programming/language/python/python-logilab-astng/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python abstract syntax tree implementation</Summary>
         <Description>python-logilab-astng contains a Python module which provides an extension to the compiler.ast module which implements an abstract syntax tree.</Description>
-        <Archive sha1sum="2d7cf9e8153d923338cecfd78eb0fd48130d2996" type="targz">http://ftp.logilab.org/pub/astng/logilab-astng-0.20.3.tar.gz</Archive>
+        <Archive sha1sum="fbb8cc9a5f65de35122f3c2f9f61ed909e27ca83" type="targz">http://ftp.logilab.org/pub/astng/logilab-astng-0.21.0.tar.gz</Archive>
     </Source>
 
     <Package>
@@ -28,6 +28,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-12-17</Date>
+            <Version>0.21.0</Version>
+            <Comment>Version bump</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2010-10-13</Date>
             <Version>0.20.3</Version>
