Rewrite packager name in history as Turkish

--- a/programming/language/java/db4-java/pspec.xml
+++ b/programming/language/java/db4-java/pspec.xml
@@ -47,7 +47,7 @@
             <Date>2010-09-16</Date>
             <Version>4.8.30</Version>
             <Comment>Version upgrade</Comment>
-            <Name>Gokhan Ozbulak</Name>
+            <Name>Gökhan Özbulak</Name>
             <Email>gozbulak@pardus.org.tr</Email>
         </Update>
         <Update release="3">
