Add translations file and rewrite packager name in history as Turkish

--- a/programming/language/java/hsqldb/pspec.xml
+++ b/programming/language/java/hsqldb/pspec.xml
@@ -50,7 +50,7 @@
             <Date>2010-09-16</Date>
             <Version>1.8.1.3</Version>
             <Comment>Version upgrade</Comment>
-            <Name>Gokhan Ozbulak</Name>
+            <Name>Gökhan Özbulak</Name>
             <Email>gozbulak@pardus.org.tr</Email>
         </Update>
         <Update release="5">
