Rewrite packager name in history as Turkish

--- a/programming/language/java/tomcat-servlet-api/pspec.xml
+++ b/programming/language/java/tomcat-servlet-api/pspec.xml
@@ -49,7 +49,7 @@
             <Date>2010-09-17</Date>
             <Version>5.5.31</Version>
             <Comment>Version upgrade</Comment>
-            <Name>Gokhan Ozbulak</Name>
+            <Name>Gökhan Özbulak</Name>
             <Email>gozbulak@pardus.org.tr</Email>
         </Update>
         <Update release="3">
