Rewrite packager name in history as Turkish

--- a/programming/language/java/sun-java/pspec.xml
+++ b/programming/language/java/sun-java/pspec.xml
@@ -121,7 +121,7 @@
             <Date>2010-11-23</Date>
             <Version>1.6.0_p22</Version>
             <Comment>Version bump to deliver various security vulnerabilities (CVE-2010-{3556,3562,3565,3566,3567,3571,3554,3563,3568,3569,3558,3552,3559,3572,3553,3555,3550,3570,3561,1321,3549,3557,3541,3573,3574,3548,3551,3560},CVE-2009-3555) </Comment>
-            <Name>Gokhan Ozbulak</Name>
+            <Name>Gökhan Özbulak</Name>
             <Email>gozbulak@pardus.org.tr</Email>
         </Update>
         <Update release="29">
