Fix tasks applet tr locales
BUG:COMMENT:14188

--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -71,6 +71,8 @@
 
             <!-- Use pangram instead of a march to preview the fonts (#14403). -->
             <Patch level="1">pangram.patch</Patch>
+
+            <Patch>fix_tasks_applet.patch</Patch>
         </Patches>
     </Source>
     <Package>
@@ -96,6 +98,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="61">
+            <Date>2010-12-21</Date>
+            <Version>4.5.4</Version>
+            <Comment>Fix tasks applet tr locales</Comment>
+            <Name>Gökmen Göksel</Name>
+            <Email>gokmen@pardus.org.tr</Email>
+        </Update>
         <Update release="60">
             <Date>2010-12-14</Date>
             <Version>4.5.4</Version>
