--- a/programming/language/R/pspec.xml
+++ b/programming/language/R/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>app:console</IsA>
         <Summary>A free software environment for statistical computing and graphics</Summary>
         <Description>This package includes the core R userspace and all R development components.</Description>
-        <Archive sha1sum="0b36780627f3cc5cea3f41e0b717ed7ee92ba086"  type="targz">http://cran.r-project.org/src/base/R-2/R-2.11.1.tar.gz</Archive>
+        <Archive sha1sum="41f443cd646f7773bd824c41ea53cac3102b428d" type="targz">http://cran.r-project.org/src/base/R-2/R-2.12.1.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>libXmu-devel</Dependency>
             <Dependency>icu4c-devel</Dependency>
@@ -26,7 +26,6 @@
             <Dependency>libSM-devel</Dependency>
             <Dependency versionFrom="1.8.8">cairo-devel</Dependency>
             <Dependency>pango-devel</Dependency>
-            <Dependency>xz-devel</Dependency>
             <Dependency>jpeg-devel</Dependency>
             <Dependency>tiff-devel</Dependency>
         </BuildDependencies>
@@ -53,7 +52,6 @@
             <Dependency>libgfortran</Dependency>
             <Dependency>libXt</Dependency>
             <Dependency>libSM</Dependency>
-            <Dependency>xz</Dependency>
             <Dependency versionFrom="1.8.8">cairo</Dependency>
             <Dependency>pango</Dependency>
             <Dependency>make</Dependency>
@@ -97,7 +95,7 @@
             <Path fileType="doc">/usr/share/doc/R</Path>
         </Files>
     </Package>
-    
+
     <Package>
         <Name>R-devel</Name>
         <Summary>Development files for R</Summary>
@@ -107,12 +105,20 @@
         <Files>
             <Path fileType="header">/usr/include</Path>
             <Path fileType="library">/usr/lib/pkgconfig/libR.pc</Path>
-            <!--<Path fileType="header">/usr/include/Rmath.h</Path>
-            <Path fileType="library">/usr/lib/pkgconfig/libRmath.pc</Path>-->
-         </Files>
+        </Files>
     </Package>
 
     <History>
+        <Update release="33">
+            <Date>2010-12-22</Date>
+            <Version>2.12.1</Version>
+            <Comment>
+                * Version Bump.
+                * Fix deps.
+            </Comment>
+            <Name>Ertuğrul Erata</Name>
+            <Email>ertugrulerata@gmail.com</Email>
+        </Update>
         <Update release="32">
             <Date>2010-10-13</Date>
             <Version>2.11.1</Version>
