--- a/programming/language/python/python-mpd/pspec.xml
+++ b/programming/language/python/python-mpd/pspec.xml
@@ -8,11 +8,11 @@
             <Name>Fatih Arslan</Name>
             <Email>farslan@pardus.org.tr</Email>
         </Packager>
-        <License>GPLv3</License>
+        <License>LGPLv3</License>
         <IsA>library</IsA>
         <Summary>Python bindings for MPD library</Summary>
         <Description>Python-mpd is an MPD (Music Player Daemon) client library written in pure Python.</Description>
-        <Archive sha1sum="55961e2052fc0b59d8d6de34f5c391818868d874" type="tarbz2">http://pypi.python.org/packages/source/p/python-mpd/python-mpd-0.2.1.tar.bz2</Archive>
+        <Archive sha1sum="e45dc7206949bd2176e7c77ebab1e21de33edc4b" type="tarbz2">http://pypi.python.org/packages/source/p/python-mpd/python-mpd-0.3.0.tar.bz2</Archive>
     </Source>
 
     <Package>
@@ -24,6 +24,20 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-12-22</Date>
+            <Version>0.3.0</Version>
+            <Comment>
+                * Version bump
+                * changed license to LGPL
+                * correctly handle errors in command lists (fixes a longstanding bug)
+                * raise IteratingError instead of breaking horribly when called wrong
+                * added fileno() to export socket FD (for polling with select et al.)
+                * support for connecting to unix domain sockets
+            </Comment>
+            <Name>Fatih Arslan</Name>
+            <Email>farslan@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2010-11-29</Date>
             <Version>0.2.1</Version>
