* Tidy up vimrc, add comments to settings * j,k keys are now capable to move upward/downward in breaked lines * Offical upstream patches are included:     * 7.3.080  spelling doesn't work on VMS     * 7.3.081  non-printable characters in 'statusline' cause trouble     * 7.3.082  leaking file descriptor when netbeans hostname doesn't exist     * 7.3.083  when a read() or write() is interrupted by a signal it fails     * 7.3.084  after window split the new one scrolls with cursor at top     * 7.3.085  (after 7.3.083) inconsistency with preproc symbols     * 7.3.086  v:count has value of previous command in expression mapping     * 7.3.087  (after 7.3.083) missing include for errno.h

--- a/editor/vi/vim/files/official/README
+++ b/editor/vi/vim/files/official/README
@@ -105,3 +105,11 @@ Individual patches for Vim 7.3:
   3099  7.3.077  when updating swapfile crypt fails there is no error message
   1565  7.3.078  warning for unused variable
   1377  7.3.079  duplicate lines in MSVC makefile
+  6011  7.3.080  spelling doesn't work on VMS
+  2257  7.3.081  non-printable characters in 'statusline' cause trouble
+  1634  7.3.082  leaking file descriptor when netbeans hostname doesn't exist
+  9996  7.3.083  when a read() or write() is interrupted by a signal it fails
+  3508  7.3.084  after window split the new one scrolls with cursor at top
+  8843  7.3.085  (after 7.3.083) inconsistency with preproc symbols
+  4005  7.3.086  v:count has value of previous command in expression mapping
+  4349  7.3.087  (after 7.3.083) missing include for errno.h
