Add missing update type as security

--- a/programming/language/php/php/pspec.xml
+++ b/programming/language/php/php/pspec.xml
@@ -125,7 +125,7 @@
     </Package>
 
     <History>
-        <Update release="84">
+        <Update release="84" type="security">
             <Date>2010-12-24</Date>
             <Version>5.2.14</Version>
             <Comment>Fix multiple security vulnerabilities
