--- a/kernel/default/kernel/TODO
+++ b/kernel/default/kernel/TODO
@@ -1,16 +1,14 @@
 TODO for 2011 kernel
 --------------------
 
-(-) SCSI HPSA SAS driver enabled in config, try it on the servers
-(-) ATH3K bt firmware
 (-) perf package
 (+) Grab lirc from staging, sync from fedora
 (+) Sync AuFS from Ubuntu
 (/50) Toshiba BT rfkill driver enabled, check omnibook
 
-(?) Grab newer NFS4ACL patches from suse
-(/50) Enable TuxOnIce
 
 (-) Config refinement
 (-) Debug spins
-(-) kerneltools improvements
+(+) ATH3K bt firmware
+(+) Enable TuxOnIce
+(+) kerneltools improvements
