--- a/kernel/default/kernel/TODO
+++ b/kernel/default/kernel/TODO
@@ -2,13 +2,13 @@ TODO for 2011 kernel
 --------------------
 
 (-) perf package
-(+) Grab lirc from staging, sync from fedora
-(+) Sync AuFS from Ubuntu
-(/50) Toshiba BT rfkill driver enabled, check omnibook
-
-
-(-) Config refinement
 (-) Debug spins
+(-) Config refinement
+
+
 (+) ATH3K bt firmware
+(+) Toshiba BT rfkill driver enabled, check omnibook
 (+) Enable TuxOnIce
 (+) kerneltools improvements
+(+) Grab lirc from staging, sync from fedora
+(+) Sync AuFS from Ubuntu
