--- a/programming/language/python/pycups/pspec.xml
+++ b/programming/language/python/pycups/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python interface to the CUPS API</Summary>
         <Description>pycups contains python bindings to wrap the CUPS API.</Description>
-        <Archive sha1sum="f6550186d66bb54f34d96d8cf5c632a3034fe3c5" type="tarbz2">http://cyberelk.net/tim/data/pycups/pycups-1.9.51.tar.bz2</Archive>
+        <Archive sha1sum="020e898a9970b2107af7b7f769574519d64d4f89" type="tarbz2">http://cyberelk.net/tim/data/pycups/pycups-1.9.53.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>cups-devel</Dependency>
         </BuildDependencies>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="20">
+            <Date>2010-12-26</Date>
+            <Version>1.9.53</Version>
+            <Comment>Version bump</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="19">
             <Date>2010-10-13</Date>
             <Version>1.9.51</Version>
