--- a/programming/language/python/pysmbc/pspec.xml
+++ b/programming/language/python/pysmbc/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python interface to the libsmbclient library</Summary>
         <Description>pysmbc is a Python binding for the libsmbclient library.</Description>
-        <Archive sha1sum="b33f003579ecb78054eea948f0ec96feed79a567" type="tarbz2">http://cyberelk.net/tim/data/pysmbc/pysmbc-1.0.9.tar.bz2</Archive>
+        <Archive sha1sum="1963af6e7fcb75733d5a398ffc0c4578532bc61d" type="tarbz2">http://cyberelk.net/tim/data/pysmbc/pysmbc-1.0.10.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>samba-devel</Dependency>
         </BuildDependencies>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-12-26</Date>
+            <Version>1.0.10</Version>
+            <Comment>Version bump</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2010-10-13</Date>
             <Version>1.0.9</Version>
