Bring perf back

--- a/kernel/default/kernel/TODO
+++ b/kernel/default/kernel/TODO
@@ -1,12 +1,12 @@
 TODO for 2011 kernel
 --------------------
 
-(-) perf package
 (-) Debug spins
 (-) Config refinement
 
 
 (+) ATH3K bt firmware
+(+) perf package
 (+) Toshiba BT rfkill driver enabled, check omnibook
 (+) Enable TuxOnIce
 (+) kerneltools improvements
