Rename and bump

--- a/programming/language/python/python-usb/pspec.xml
+++ b/programming/language/python/python-usb/pspec.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE PISI SYSTEM "http://www.pardus.org.tr/projeler/pisi/pisi-spec.dtd">
 <PISI>
     <Source>
-        <Name>pyusb</Name>
+        <Name>python-usb</Name>
         <Homepage>http://pyusb.berlios.de</Homepage>
         <Packager>
             <Name>Ozan Çağlayan</Name>
@@ -10,13 +10,13 @@
         </Packager>
         <License>BSD</License>
         <IsA>library</IsA>
-        <Summary>Python bindings for libusb</Summary>
-        <Description>pyusb is a native Python module written in C which provides USB access for it.</Description>
-        <Archive sha1sum="0adfc60c2e24ecaf1b7caca7d57ff50f5e7a4de3" type="targz">http://download.berlios.de/pyusb/pyusb-0.4.2.tar.gz</Archive>
+        <Summary>Python bindings for libusb 0.x</Summary>
+        <Description>python-usb is a native Python module written in C which provides USB access for it.</Description>
+        <Archive sha1sum="5a6729169e320e9dfb19c6af461eca6d45242787" type="targz">mirrors://sourceforge/pyusb/PyUSB%200.x/0.4.3/pyusb-0.4.3.tar.gz</Archive>
     </Source>
 
     <Package>
-        <Name>pyusb</Name>
+        <Name>python-usb</Name>
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
@@ -24,6 +24,13 @@
     </Package>
 
     <History>
+        <Update release="6">
+            <Date>2010-12-27</Date>
+            <Version>0.4.3</Version>
+            <Comment>Version bump</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="5">
             <Date>2010-10-13</Date>
             <Version>0.4.2</Version>
