--- a/programming/language/python/python-usb/pspec.xml
+++ b/programming/language/python/python-usb/pspec.xml
@@ -17,6 +17,9 @@
 
     <Package>
         <Name>python-usb</Name>
+        <Replaces>
+            <Package>pyusb</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
